# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.101 2005/04/09 06:22:00 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  09 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Major overhaul of partitioning code for overhauled GLIStorageDevice.

  03 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
  Fixed 2 bugs in Users.py.
  
  02 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Removed reiserfs from the supported filesystems

  02 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
  Users.py- put in password field for user adding, 
  loading from saved config file implemented.
  Networking.py, Timezone.py, fixed tab spacings.
  
  30 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Cleanup deactivate() in Users

  30 Mar 2005; John N. Laliberte <allanonjl@gentoo.org>
  Users.py is now half integrated into the backend (saving only).
  
  29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added code to detect when the output logfile is moved and temporarily
  disabled the done/error dialogs.

  29 Mar 2005; John N. Laliberte <allanonjl@gentoo.org>
  Complete overhaul of Users.py.  UI is smart, but not yet integrated
  into the backend.

  28 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added install complete/error message boxes and a TextView for displaying
  output. Change /tmp/install.log back to /var/log/install.log

  26 Mar 2005; Preston Cody <codeman@gentoo.org>
  removed /usr/local/zoneinfo from gtkfe b/c it's already being added on the BE.
  
  26 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Blank entry won't get added with Update in Networking.py

  25 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  gentoo-sources is default option in Kernel.py. Changed all gtk.TRUE/FALSE
  to True/False

  23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added livecd-kernel option to Kernel.py.

  21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>