@@ -1,9 +1,18 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.101 2005/04/09 06:22:00 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.102 2005/04/10 13:41:59 allanonjl Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
+  10 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
+  Added check to ensure uid is an int and not a str.
+  Changed named of root password button in gui, added
+  a seperate reset button for root password.  Fixed
+  warning about reparenting a widget.  Added popup
+  error message if root passwords do not match.  Changed
+  behavior so click on an item automatically selects
+  it for editing, getting rid of the need for a button.
+  
   09 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Major overhaul of partitioning code for overhauled GLIStorageDevice.
 
